WIP : Refactoring code